--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -1,15 +1,16 @@
-specVersion: 0.0.1
-description: Binance Smart Chain TestNet Blocks
+specVersion: 0.0.2
+description: Binance Smart Chain Blocks
 repository: https://github.com/crypto0390
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: BSCValidatorSet
-    network: chapel
+    network: bsc
     source:
       address: '0x0000000000000000000000000000000000001000'
       abi: BSCValidatorSet
+      startBlock: 11333300
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
