--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -1,13 +1,15 @@
 {
   "name": "exchange",
   "description": "leonicornswap Subgraph",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "repository": "https://github.com/Crypto0390/leonicornswap-subgraph.git",
   "author": "Crypto0390",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ crypto0390/leonicornexchange subgraph.yaml"
+    "auth": "graph auth --product hosted-service 50404dbd7394410cbad919fb24793288",
+
+    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ crypto0390/leonicornexchange     subgraph.yaml"
   }
 }
