--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -7,9 +7,6 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen": "graph codegen subgraph.yaml",
-    "build": "graph build subgraph.yaml",
-    "auth": "graph auth --product hosted-service 50404dbd7394410cbad919fb24793288",
-
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ crypto0390/leonicornexchange     subgraph.yaml"
+    "build": "graph build subgraph.yaml"
   }
 }
